# docscalpel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI_MANUAL.md  INSTALL.md  MANIFEST.in  QUICKSTART_CLI.md  README.md  pdf-extractor  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: CLAUDE.md  technical-blog-post.md
docscalpel/: __init__.py  __main__.py  caption_parser.py  cropper.py  extractor.py  figure_merger.py  pdf_processor.py
docscalpel/cli/: __init__.py  formatter.py  main.py
docscalpel/detectors/: figure_detector.py
fixtures/: generate_test_pdfs.py
specs/001-pdf-extractor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdf-extractor/checklists/: accuracy-performance.md  requirements.md
specs/001-pdf-extractor/contracts/: cli-interface.md  library-interface.md
src/cli/: __init__.py  formatter.py  logger.py  main.py
src/lib/: __init__.py  extractor.py  models.py
src/lib/detectors/: __init__.py  equation_detector.py  table_detector.py
tests/: conftest.py
tests/contract/: test_extractor_contract.py  test_output_formats.py
tests/integration/: test_cli_library_integration.py  test_full_extraction_workflow.py  test_pdf_library_integration.py
tests/unit/: test_cli.py  test_detectors.py  test_pdf_processor.py
